fixed background circle color in dark mode

--- a/style-dark.css
+++ b/style-dark.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: #9f5c2c;
     --primary-color-semi-transparent: rgba(255, 128, 38, 0.8);
-    --secondary-color: #ad7300;
+    --secondary-color: #2a1c01;
     --secondary-color-semi-transparent: rgba(32, 30, 28, 0.8);
     --dark-color: rgb(255, 239, 214);
     --light-color: #201e1c;
